--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>This is an example sample</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
